fix: home parallax on iOS

--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -1,4 +1,5 @@
 .logo {
   height: 100%;
   cursor: pointer;
+  object-fit: contain;
 }
