--- a/src/app/public/home/home.component.scss
+++ b/src/app/public/home/home.component.scss
@@ -15,6 +15,9 @@ $base-parallax-perspective: 8px;
   perspective-origin: 0%;
   @media screen and (max-width: 840px) {
     height: calc(100vh - 2rem);
+    @media not all and (min-resolution:.001dpcm){ @supports (-webkit-appearance:none) {
+      position: -webkit-sticky;
+    }}
   }
 }
 
@@ -30,7 +33,11 @@ $base-parallax-perspective: 8px;
 
 .bg__image {
   @extend .image;
-  transform: translateZ(0px) scale(1);
+  -webkit-transform: translate3d(0, 0px, 0) scale(1);
+  -moz-transform: translate3d(0, 0px, 0) scale(1);
+  -ms-transform: translate3d(0, 0px, 0) scale(1);
+  -o-transform: translate3d(0, 0px, 0) scale(1);
+  transform: translate3d(0, 0px, 0) scale(1);
   @media screen and (max-width: 840px) {
     background-color: #e1e2e2ff;
   }
@@ -41,9 +48,13 @@ $base-parallax-perspective: 8px;
   left: 23vw;
   transform: translateZ(2.5px) scale(parallax-scale-factor(5));
   @media screen and (max-width: 840px) {
-    transform: translateZ(3px) scale(parallax-scale-factor(3));
+    -webkit-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+    -moz-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+    -ms-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+    -o-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+    transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
     left: 1vw;
-    top: calc((2800/1200 * 100vw) * 27/100);
+    top: calc((2800/1200 * 100vw) * 22/100);
   }
 }
 .rocket__image-landscape {
@@ -52,7 +63,11 @@ $base-parallax-perspective: 8px;
   left: 23vw;
   transform: translateZ(2.5px) scale(parallax-scale-factor(5));
   @media screen and (max-width: 840px) {
-    transform: translateZ(3px) scale(parallax-scale-factor(3));
+    -webkit-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+    -moz-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+    -ms-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+    -o-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+    transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
     left: 1vw;
     top: calc((2800/1200 * 100vw) * 32/100);
   }
@@ -61,7 +76,11 @@ $base-parallax-perspective: 8px;
 .clouds__image {
   @extend .image;
   top: calc(1241*45/(100*1612) * 100vw);
-  transform: translateZ(3px) scale(parallax-scale-factor(3));
+  -webkit-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+  -moz-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+  -ms-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+  -o-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+  transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
   @media screen and (max-width: 840px) {
     top: calc((2800/1200 * 100vw) * 29/100);
   }
@@ -73,9 +92,17 @@ $end: 50;
   .clouds__image--#{$i} {
     @extend .image;
     top: calc(1241*45/(100*1612) * 100vw);
-    transform: translateZ(3px) scale(parallax-scale-factor(3));
+    -webkit-transform: translate3d(0, 0, 3px, 0) scale(parallax-scale-factor(3));
+    -moz-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+    -ms-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+    -o-transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
+    transform: translate3d(0, 0, 3px) scale(parallax-scale-factor(3));
     @media screen and (max-width: 840px) {
       top: calc((2800/1200 * 100vw) * #{$i}/100);
+      @media not all and (min-resolution:.001dpcm)
+{ @supports (-webkit-appearance:none) {
+  top: calc((2800/1200 * 100vw) * calc(#{$i} - 7)/100);
+}}
     }
   }
 }
@@ -83,12 +110,20 @@ $end: 50;
 .stars__image {
   @extend .image;
   top: 125px;
-  transform: translateZ(1px) scale(parallax-scale-factor(1));
+  -webkit-transform: translate3d(0, 0, 1px) scale(parallax-scale-factor(1));
+  -moz-transform: translate3d(0, 0, 1px) scale(parallax-scale-factor(1));
+  -ms-transform: translate3d(0, 0, 1px) scale(parallax-scale-factor(1));
+  -o-transform: translate3d(0, 0, 1px) scale(parallax-scale-factor(1));
+  transform: translate3d(0, 0, 1px) scale(parallax-scale-factor(1));
 }
 
 .content {
   transform-origin: 0;
-  transform: translateZ(0px) scale(parallax-scale-factor(0));
+  -webkit-transform: translate3d(0, 0px, 0) scale(parallax-scale-factor(0));
+  -moz-transform: translate3d(0, 0px, 0) scale(parallax-scale-factor(0));
+  -ms-transform: translate3d(0, 0px, 0) scale(parallax-scale-factor(0));
+  -o-transform: translate3d(0, 0px, 0) scale(parallax-scale-factor(0));
+  transform: translate3d(0, 0px, 0) scale(parallax-scale-factor(0));
   @media screen and (max-width: 840px) {
     position: relative;
     top: calc((2800/1200 * 100vw) * 9/100);
@@ -100,6 +135,15 @@ $end: 50;
   top: calc(1241/1612 * 100vw);
   @media screen and (max-width: 840px) {
     top: calc(2800/1200 * 100vw);
+    @media not all and (min-resolution:.001dpcm) { @supports (-webkit-appearance:none) {
+      top: calc(2800/1200 * 100vw * 75.5/100);
+      right: 31vw;
+      -webkit-transform: translate3d(0, 0px, 5px) scale(parallax-scale-factor(5));
+      -moz-transform: translate3d(0, 0px, 5px) scale(parallax-scale-factor(5));
+      -ms-transform: translate3d(0, 0px, 5px) scale(parallax-scale-factor(5));
+      -o-transform: translate3d(0, 0px, 5px) scale(parallax-scale-factor(5));
+      transform: translate3d(0, 0px, 5px) scale(parallax-scale-factor(5));
+    }}
   }
 }
 
