--- a/src/app/shared/components/habit-explanation/habit-explanation.component.scss
+++ b/src/app/shared/components/habit-explanation/habit-explanation.component.scss
@@ -80,3 +80,7 @@ mat-icon.mat-card-avatar {
   }
 }
 
+.min-width-100 {
+  min-width: 100px;
+}
+
